--- a/package.json
+++ b/package.json
@@ -23,26 +23,7 @@
       "html"
     ]
   },
-  "dependencies": {
-    "uglify-js": "latest",
-    "browserify": "latest",
-    "browserify-css": "latest",
-    "jquery": "2.2.4",
-    "jquery-ui-bundle": "1.12.1-migrate",
-    "layout": "git://github.com/benmaurer/layout.git#master",
-    "datatables.net": "1.10.19",
-    "datatables.net-buttons": "1.5.3",
-    "popper.js": "1.14.3",
-    "bootstrap": "4.1.1",
-    "dat.gui": "0.7.2",
-    "ros3d": "git://github.com/RobotWebTools/ros3djs.git#develop",
-    "ios-overlay": "0.0.3",
-    "spin": "0.0.1",
-    "brace": "0.11.1",
-    "d3": "3",
-    "d3-tip": "0.9.1",
-    "jsondiffpatch": "0.2.5"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-openease": "^0.1.7",
